--- a/src/app/users-form/user-form.component.html
+++ b/src/app/users-form/user-form.component.html
@@ -1,94 +1,110 @@
 <div class="container">
     <div [hidden]="submitted">
-    <h1>User Form</h1>
-    <form (ngSubmit)="onSubmit()" #userForm="ngForm">
-      {{diagnostic}}
-      <div class="form-group">
-        <label for="firstName">First name</label>
-        <input type="text" class="form-control" id="firstName" required [(ngModel)]="model.firstName" name="firstName" #firstName="ngModel" #spy> 
-        <br>TODO: remove this: {{spy.className}}
-        <div [hidden]="firstName.valid || firstName.pristine"
-          class="alert alert-danger">
-         First name is required
-        </div>     
-      </div>
+        <h1>User Form</h1>
+        <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+            
+            <div class="form-group">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" id="firstName" required minlength="4" [(ngModel)]="model.firstName" name="firstName" #firstName="ngModel">
+                <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="alert alert-danger">
+                    <div *ngIf="firstName.errors.required">
+                        First name is required
+                    </div>
+                    <div *ngIf="firstName.errors.minlength">
+                        First name must be at least 4 characters long
+                    </div>
 
-      <div class="form-group">
-        <label for="secondName">Second name</label>
-        <input type="text" class="form-control" id="secondName" required [(ngModel)]="model.secondName" name="secondName" #secondName="ngModel">
-        <div [hidden]="secondName.valid || secondName.pristine"
-          class="alert alert-danger">
-         Second name is required
-        </div>     
-      </div>
+                </div>
+            </div>
 
-      <div class="form-group">
-        <label for="language">Language</label>        
-        <select class="form-control" id="language" required [(ngModel)]="model.language" name="language" #language="ngModel">
-          <div [hidden]="language.valid || language.pristine"
-          class="alert alert-danger">
-         Language is required
-        </div>     
-          <option *ngFor="let lang of languages" [value]="lang">{{lang}}</option>
-        </select>
-      </div>
+            <div class="form-group">
+                <label for="secondName">Second name</label>
+                <input type="text" class="form-control" id="secondName" required minlength="4" [(ngModel)]="model.secondName" name="secondName" #secondName="ngModel">
+                <div *ngIf="secondName.invalid && (secondName.dirty || secondName.touched)" class="alert alert-danger">
+                    <div *ngIf="secondName.errors.required">
+                        Second name is required
+                    </div>
+                    <div *ngIf="secondName.errors.minlength">
+                        Second name must be at least 4 characters long
+                    </div>
+                </div>
+            </div>
 
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" required [(ngModel)]="model.email" name="email" #email="ngModel">
-        <div [hidden]="email.valid || email.pristine"
-          class="alert alert-danger">
-         Email is required
-        </div>     
-      </div>
+            <div class="form-group">
+                <label for="language">Language</label>
+                <select class="form-control" id="language" required [(ngModel)]="model.language" name="language" #language="ngModel">
+                    <div [hidden]="language.valid || language.pristine" class="alert alert-danger">
+                        Language is required
+                    </div>
+                    <option value="">Please select a language</option>
+                    <option *ngFor="let lang of languages" [value]="lang">{{lang}}</option>
+                </select>
+            </div>
 
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="pwd" class="form-control" id="pwd" required [(ngModel)]="model.password" name="password" #password="ngModel">
-        <div [hidden]="password.valid || password.pristine"
-          class="alert alert-danger">
-         Password is required
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" required [(ngModel)]="model.email" name="email" #email="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+[a-zA-Z]+">
+                <div *ngIf="(email.touched || email.dirty) && email.errors" class="alert alert-danger">
+                    <div *ngIf="email.errors.required">
+                        Please enter your email address
+                    </div>
+                    <div *ngIf="email.errors.pattern">
+                        Please enter a valid email address
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="pwd" class="form-control" id="pwd" required [(ngModel)]="model.password" name="password" #password="ngModel" minlength="8">
+                <div *ngIf="(password.touched || password.dirty) && password.errors" class="alert alert-danger">
+                    <div *ngIf="password.errors.required">
+                        Please enter your password
+                    </div>
+                    <div *ngIf="password.errors.minlength">
+                        Password must be at least 8 characters long
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="phoneNumber">Phone number</label>
+                <input type="tel" placeholder="xxx-xxx-xx-xx" class="form-control" id="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" [(ngModel)]="model.phoneNumber" name="phoneNumber">
+            </div>
+
+            <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Submit</button>
+
+        </form>
+    </div>
+
+    <div [hidden]="!submitted">
+        <h2>You submitted the following:</h2>
+        <div class="row">
+            <div class="col-xs-3">First name</div>
+            <div class="col-xs-9">{{ model.firstName }}</div>
         </div>
-      </div>
-
-      <div class="form-group">
-        <label for="phoneNumber">Phone number</label>
-        <input type="tel" class="form-control" id="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" [(ngModel)]="model.phoneNumber" name="phoneNumber">
-      </div>
-
-      <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Submit</button>
-
-    </form>
+        <div class="row">
+            <div class="col-xs-3">Second name</div>
+            <div class="col-xs-9">{{ model.secondName }}</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">Language</div>
+            <div class="col-xs-9">{{ model.language }}</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">Email</div>
+            <div class="col-xs-9">{{ model.email }}</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">Password</div>
+            <div class="col-xs-9">{{ model.password }}</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">Phone number</div>
+            <div class="col-xs-9">{{ model.phoneNumber }}</div>
+        </div>
+        <br>
+        <button class="btn btn-primary" (click)="submitted=false">Edit</button>
     </div>
-    
-  <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
-    <div class="row">
-      <div class="col-xs-3">First name</div>
-      <div class="col-xs-9">{{ model.firstName }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Second name</div>
-      <div class="col-xs-9">{{ model.secondName }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Language</div>
-      <div class="col-xs-9">{{ model.language }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Email</div>
-      <div class="col-xs-9">{{ model.email }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Password</div>
-      <div class="col-xs-9">{{ model.password }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Phone number</div>
-      <div class="col-xs-9">{{ model.phoneNumber }}</div>
-    </div>
-    <br>
-    <button class="btn btn-primary" (click)="submitted=false">Edit</button>
-  </div>
 
 </div>
